Changelog
=========

2.0a6 - Unreleased
------------------

- Removed overly creative code using access rules in webdav tests.
  [hannosch]

- Added manage_options restriction for new folderish types.
  [hannosch]

- Removed no longer required ATCTContent.manage_options restriction.
  [hannosch]

- Corrected package dependencies.
  [hannosch]

2.0a5 - 2009-12-16
------------------

- Apply patch from mr_savage. Fixes a broken call to normalizeString in 
  atct_topic_view. http://dev.plone.org/plone/ticket/9897
  [esteele]

2.0a4 - 2009-12-03
------------------

- Use "Modify portal content" and "Add portal content" for topic and event 
  instead of the type-specific permissions previously used.
  [esteele]

2.0a3 - 2009-12-03
------------------

- Replace the custom __bobo_traverse__ for handling image scales on ATNewsItem
  and ATImage, because it's still needed for path traversal to scales to work.
  This fixes http://dev.plone.org/plone/ticket/9706.
  [davisagli]

2.0a2 - 2009-12-02
------------------

- Attempt to Acquisition unwrap the context but allow the (potentially)
  wrapped object through if unwrapping fails. This closes
  http://dev.plone.org/old/plone/ticket/9796.
  [matthewwilkes]

- Adjust the reindex tests for the change I just made in Archetypes.
  [davisagli]

- Remove the eventType field and merge it into the subject field.
  Closes http://dev.plone.org/old/plone/ticket/5058.
  [rossp]

2.0a1 - 2009-11-18
------------------

- Pass an _initializing_ flag when updating fields on object initialization,
  to avoid indexing twice (since CMF indexes on the item's ObjectAddedEvent,
  which now takes place after the call to initializeArchetype).
  [davisagli]

- Replaced date criterion "ago/from now" by "in the past/in the future".
  [vincentfretin]

- help_criteria_field_name msgid was used twice but with different default
  messages. Fixed that.
  [vincentfretin]

- Made ATImage compute its ID from its title if provided. Closes