@@ -35,7 +35,6 @@ class TestSiteATFile(atcttestcase.ATCTTypeTestCase):
     portal_type = 'File'
     title = 'File'
     meta_type = 'ATFile'
-    icon = 'file_icon.png'
 
     def test_implementsFileContent(self):
         iface = IFileContent
