@@ -26,7 +26,6 @@ class TestSiteATLink(atcttestcase.ATCTTypeTestCase):
     portal_type = 'Link'
     title = 'Link'
     meta_type = 'ATLink'
-    icon = 'link_icon.png'
 
     def test_implementsATLink(self):
         iface = IATLink
