@@ -4,6 +4,9 @@ Changelog
 2.0a6 - Unreleased
 ------------------
 
+- Removed useless manual tests of the icon names of all types.
+  [hannosch]
+
 - Removed overly creative code using access rules in webdav tests.
   [hannosch]
 
